# mlops

./: Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
api/: main.py  schemas.py
artifacts/models/: heart_disease_pipeline.joblib  model_comparison.csv  model_metadata.json
artifacts/plots/: eda_summary.json
k8s/: deployment.yaml  service.yaml
mlruns/1/03f20bd9219046efa63c664829194886/artifacts/model/: MLmodel
mlruns/1/1d62c93ad1ab4913b1f2c817c9c5894b/artifacts/model/: MLmodel  model.pkl  requirements.txt
mlruns/1/45042016a2404b56920849ca08211068/artifacts/model/: MLmodel  conda.yaml
mlruns/1/a16c44d6a2cb48769bfde5cad8a78b2f/artifacts/model/: MLmodel  input_example.json  model.pkl  serving_input_example.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: heart-risk-api.json
monitoring/grafana/provisioning/dashboards/: default.yml
report/: ~$MLCZG523_Assignment_01_Report.docx
scripts/: download_data.py  eda_data.py  sample_request.json  train.py
src/heart_risk/: __init__.py  config.py  data.py  modeling.py
src/heart_risk_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py  test_data.py  test_modeling.py
