[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-risk-mlops"
version = "1.0.0"
description = "MLOps pipeline for UCI Cleveland heart disease risk classification"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.115.12",
  "joblib==1.4.2",
  "matplotlib==3.10.1",
  "mlflow==2.21.3",
  "numpy==2.1.3",
  "pandas==2.2.3",
  "prometheus-client==0.21.1",
  "pydantic==2.11.1",
  "requests==2.32.3",
  "scikit-learn==1.6.1",
  "seaborn==0.13.2",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.3.5",
  "pytest-cov==6.0.0",
  "ruff==0.11.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["report/build_report.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
